# AIphaForge

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/sample_data/: AAPL.csv  TSLA.csv
scripts/: generate_holidays_json.py
src/aiphaforge/: __init__.py  broker.py  capital_allocator.py  config.py  core_event_driven.py  core_vectorized.py  corporate_actions.py  costs.py  data.py  engine.py  exit_rules.py  fees.py  hooks.py  indicators.py  latency.py  margin.py  market_impact.py  meta.py  optimizer.py  orders.py  performance.py  plotting.py  portfolio.py  portfolio_optimizer.py  position_sizing.py  results.py  risk.py  significance.py  strategies.py  utils.py
src/aiphaforge/calendars/: __init__.py  core.py  predefined.py
src/aiphaforge/calendars/_data/: LICENSE.holidays  holidays.json
src/aiphaforge/probes/: __init__.py  abtest.py  models.py  questions.py  scoring.py  transforms.py
src/backtest/: __init__.py  engine.py  hooks.py  performance.py  results.py
tests/: conftest.py  test_annualization.py  test_broker.py  test_calendars_core.py  test_calendars_e2e.py  test_calendars_predefined.py  test_data_validation.py  test_e2e.py  test_engine.py  test_fees.py  test_hook_contract.py  test_metadata.py  test_modules.py  test_numerics.py  test_performance.py  test_portfolio.py  test_probes_abtest.py  test_probes_determinism_modes.py  test_probes_e2e.py  test_probes_models.py  test_probes_parse.py  test_probes_provider_config.py  test_probes_questions.py  test_probes_scoring.py  test_probes_tolerance_presets.py  test_probes_transforms.py  test_probes_v2_0_compat.py  test_psr_dsr.py  test_risk_api.py  test_v05_features.py  test_v06_features.py  test_v07_features.py  test_v08_features.py  test_v091_features.py  test_v092_features.py  test_v09_features.py  test_v101_features.py  test_v102_features.py  test_v103_features.py  test_v10_features.py  (+5 more)
