[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiphaforge"
version = "1.9.6"
description = "A high-performance backtest engine for AI agent-driven quantitative trading"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "AIphaForge Contributors"},
]
keywords = ["backtest", "quantitative-trading", "ai-agent", "trading", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    # scipy is required by aiphaforge.significance (PSR/DSR) and
    # aiphaforge.portfolio_optimizer; the dev install must include it
    # so the public test suite (which exercises both) can run.
    "scipy>=1.10",
]
plot = ["matplotlib>=3.5"]
data = ["yfinance>=0.2"]
optimize = ["optuna>=3.0"]
portfolio = ["scipy>=1.10"]
# significance.py lazy-imports scipy for PSR/DSR; arch is only needed
# for Model Confidence Set and similar advanced significance paths.
significance = ["scipy>=1.10", "arch>=6.0"]
all = ["matplotlib>=3.5", "yfinance>=0.2", "optuna>=3.0", "arch>=6.0", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/chifongwong-coder/AIphaForge"
Repository = "https://github.com/chifongwong-coder/AIphaForge"
Issues = "https://github.com/chifongwong-coder/AIphaForge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
